Adjust in welcome page to work in ios

--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -219,7 +219,8 @@ section {
     @include mobile-only {
       width: 245px;
       height: 65px;
-      font-size: 18px;
+      font-size: 16px;
+      font-weight: 800;
       margin: 35px auto 0 auto;
     }
 
