--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -144,12 +144,6 @@
       font-size: 12px;
     }
 
-    //& input {
-    //  position: absolute;
-    //  left: -24px;
-    //  top: 2px;
-    //  pointer-events: none;
-    //}
   }
 }
 
@@ -285,6 +279,11 @@
     height: 100%;
     transition: transform 0.4s ease;
     background: #F9F9F9;
+    @include mobile-only {
+      padding: 0 12px;
+      justify-content: flex-start;
+      width: calc(100% - 24px);
+    }
 
     h3 {
       font-family: $font-secondary-family;
