--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -160,6 +160,11 @@ section {
       opacity: 1;
       display: flex;
     }
+
+    .invite__loginButtons {
+      opacity: 0 !important;
+      // display: none !important;
+    }
   }
 
   &__counter {
@@ -241,6 +246,41 @@ section {
       // @include mobile-only {
       //   display: none;
       // }
+    }
+  }
+
+  &__loginButtons {
+    margin: 36px auto;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    display: none;
+    @include mobile-only {
+      flex-direction: column;
+    }
+
+    & > div {
+      margin: 0 12px;
+      padding: 12px 16px;
+      border-radius: 36px;
+      color: $surface-color;
+      font-family: $font-primary-family;
+      letter-spacing: 0.4px;
+      font-size: 18px;
+      cursor: pointer;
+      @include mobile-only {
+        margin: 6px 24px;
+        text-align: center;
+        padding: 18px 16px;
+      }
+    }
+
+    &-gmail {
+      background: #d44a3d;
+    }
+
+    &-facebook {
+      background: #4267b2;
     }
   }
 
@@ -329,7 +369,7 @@ section {
   &--invite {
     opacity: 0;
     display: none;
-    transform: translate(0px, -115px);
+    transform: translate(0px, 50px);
   }
 }
 
