Add adsense verification code

--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -55,6 +55,8 @@
     src="https://www.facebook.com/tr?id=1296410647200519&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Facebook Pixel Code -->
+
+  <script data-ad-client="ca-pub-8286231373119724" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <script>
