--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -80,8 +80,8 @@
         <span class="">Compartilhar</span>
       </button>
       <div class="invite__loginButtons">
-        <div class="invite__loginButtons-facebook" onclick="loginWithFacebook()">Entrar com facebook</div>
-        <div class="invite__loginButtons-gmail" onclick="loginWithGmail()">Entrar com gmail</div>
+        <div class="invite__loginButtons-facebook" onclick="loginWithFacebook()">Continuar com facebook</div>
+        <div class="invite__loginButtons-gmail" onclick="loginWithGmail()">Continuar com gmail</div>
       </div>
       <div class="invite__cta" onclick="showLoginButtons()" title="Seja um Beta tester!">
         Solicitar Convite
