Add instagram option when request invite

--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -80,8 +80,9 @@
         <span class="">Compartilhar</span>
       </button>
       <div class="invite__loginButtons">
-        <div class="invite__loginButtons-facebook" onclick="loginWithFacebook()">Continuar com facebook</div>
-        <div class="invite__loginButtons-gmail" onclick="loginWithGmail()">Continuar com gmail</div>
+        <div class="invite__button invite__button-facebook" onclick="loginWithFacebook()">Continuar com facebook</div>
+        <div class="invite__button invite__button-gmail" onclick="loginWithGmail()">Continuar com gmail</div>
+        <div class="invite__button invite__button-instagram" onclick="window.location = 'https://www.instagram.com/portoalegreme'">Ou siga nosso <b>instagram</b> e seja avisado por lá.</div>
       </div>
       <div class="invite__cta" onclick="showLoginButtons()" title="Seja um Beta tester!">
         Solicitar Convite
