--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -255,24 +255,25 @@ section {
     opacity: 0;
     transition: opacity 0.4s ease;
     display: none;
+    flex-wrap: wrap;
     @include mobile-only {
       flex-direction: column;
     }
+  }
 
-    & > div {
-      margin: 0 12px;
-      padding: 12px 16px;
-      border-radius: 36px;
-      color: $surface-color;
-      font-family: $font-primary-family;
-      letter-spacing: 0.4px;
-      font-size: 18px;
-      cursor: pointer;
-      @include mobile-only {
-        margin: 6px 24px;
-        text-align: center;
-        padding: 18px 16px;
-      }
+  &__button {
+    margin: 0 12px;
+    padding: 12px 16px;
+    border-radius: 36px;
+    color: $surface-color;
+    font-family: $font-primary-family;
+    letter-spacing: 0.4px;
+    font-size: 18px;
+    cursor: pointer;
+    @include mobile-only {
+      margin: 6px 24px;
+      text-align: center;
+      padding: 18px 0px;
     }
 
     &-gmail {
@@ -281,6 +282,17 @@ section {
 
     &-facebook {
       background: #4267b2;
+    }
+
+    &-instagram {
+      color: $font-primary-color;
+      width: 100%;
+      text-align: center;
+      margin: 6px 0;
+      & b {
+        color: #C13584;
+        border-bottom: 1px solid;
+      }
     }
   }
 
