--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -132,6 +132,9 @@
           	</object>
           </video>
         </div>
+        <a class="android__playStoreBanner" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+          <img alt='Disponível no Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/pt-br_badge_web_generic.png'/>
+        </a>
       </div>
       <div class="demo__plataform-numbers">
         <b><%= @events_count %></b> eventos e atividades de
