--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?flags=gated&rum=true&features=Element.prototype.closest%2CIntersectionObserverEntry%2CIntersectionObserver%2CMutationObserver%2Cfetch%2CrequestAnimationFrame%2CrequestIdleCallback%2CArray.prototype.forEach"></script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+      'gtm.start'                    :
+        new Date().getTime(), event: 'gtm.js'
+    });
+    var f                          = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async                        = true;
+    j.src                          =
+      'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-WH7RVCR');</script>
+  <!-- End Google Tag Manager -->
+
 
   <title><%= meta_title %></title>
 
@@ -31,8 +48,33 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%#= javascript_pack_tag 'train', 'data-turbolinks-track': 'reload', defer: true if params[:action] == 'train' %>
 
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1296410647200519');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1296410647200519&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Facebook Pixel Code -->
+
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <!--<div class="mdc-drawer-app-content">-->
 <div style="height: 64px; width: 100%"></div>
 <% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
