Add type in button tags

--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -79,7 +79,7 @@
 <%= yield %>
 
 <div class="pwa-install-prompt__container">
-  <button class="pwa-install-prompt__overlay">Close</button>
+  <button class="pwa-install-prompt__overlay" type="button">Close</button>
   <div class="pwa-install-prompt">
     <div class="pwa-install-prompt__icon__container">
       <img class="pwa-install-prompt__icon" src="<%= image_url 'icons/launcher-icon-72x72' %>" alt="Alegreme" />
