--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
           <i title="Versão de testes do aplicativo ainda em desenvolvimento e validações">beta</i> vamos liberar até 100 convites por semana
         </div>
       </div>
-      <button class="shareBtn shareBtn--invite " aria-label="Compartilhar" style="">
+      <button class="shareBtn shareBtn--invite " aria-label="Compartilhar" style="" type="button">
         <i class="">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path fill="none" d="M0 0h24v24H0V0z"/>
@@ -307,7 +307,7 @@
       <%= responsive_image_tag "welcome/footer-logo-icon", alt: 'logo', title: 'Pimba!', class: 'lazyload' %>
       <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
     </div>
-    <button class="shareBtn" aria-label="Compartilhar" style="">
+    <button class="shareBtn" aria-label="Compartilhar" style="" type="button">
       <i class="">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path fill="none" d="M0 0h24v24H0V0z"/>
