Change today-and-tomorrow section to this-week

--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -8,12 +8,12 @@
 <!--        Salvos-->
 <!--      </div>-->
 <!--    </div>-->
-    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="today-and-tomorrow">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="this-week">
       <div class="me-float-menu__icon">
         <i class="material-icons">today</i>
       </div>
       <div class="me-float-menu__label">
-        Hoje e amanhã
+        Esta semana
       </div>
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="follow">
