Add cache in components at feed

--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -1,3 +1,4 @@
+
 <%
 
   raise ArgumentError unless identifier && items && title
@@ -9,7 +10,6 @@
   json_request = local_assigns.fetch(:json_request, false)
 
 %>
-
 
 <section class="me-feed__section"
          data-controller="section"
@@ -34,33 +34,38 @@
            data-filter-init-filters-applyed="<%= filters_applyed.to_json %>"
            data-filter-origin="<%= opts[:origin] %>"
            data-target="filter.filterContainer section.filter">
-        <% if filters[:categories] && !items[:categories].blank? %>
-          <%= render partial: 'feeds/filter', locals: {
-              initial_filters:              items[:categories],
-              params_filters:               params[:categories],
-              filters_that_exist_in_events: items[:categories],
-              icon_type:                    'filter_list',
-              type:                         'categories'
-          } %>
+          <% if filters[:categories] && !items[:categories].blank? %>
+            <%# cache [items[:categories], params[:categories]], {expires_in: 1.day} do %>
+              <%= render(partial: 'feeds/filter', locals: {
+                  initial_filters:              items[:categories],
+                  params_filters:               params[:categories],
+                  filters_that_exist_in_events: items[:categories],
+                  icon_type:                    'filter_list',
+                  type:                         'categories'
+              },
+              cached: true) %>
+          <%# end %>
         <% end %>
         <% if (filters[:kinds] && params[:categories] && !items[:kinds].blank?) || (filters[:kinds] && !params[:kinds].blank?) %>
-          <%= render partial: 'feeds/filter', locals: {
+          <%= render(partial: 'feeds/filter', locals: {
               initial_filters:              items[:kinds],
               params_filters:               params[:kinds],
               filters_that_exist_in_events: items[:kinds],
               icon_type:                    'filter_list',
               type:                         'kinds'
-          } %>
+          },
+          cached: true) %>
         <% end %>
         <% if filters[:ocurrences] && !items[:ocurrences].blank? %>
           <%= title[:ocurrences] %>
-          <%= render partial: 'feeds/filter', locals: {
+          <%= render(partial: 'feeds/filter', locals: {
               initial_filters:              items[:ocurrences],
               params_filters:               params[:ocurrences],
               filters_that_exist_in_events: items[:ocurrences],
               icon_type:                    '',
               type:                         'ocurrences'
-          } %>
+          },
+          cached: true) %>
         <% end %>
       </div>
     <% end %>
@@ -70,16 +75,22 @@
          data-section-turbolinks-persist-scroll="0"
          data-target="section.scrollContainer">
       <% unless items.empty? %>
-        <%= render partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
-            identifier:   identifier,
-            json_request: json_request
-        } %>
+        <%# cache [identifier, items[:events]], {expires_in: 1.day} do %>
+          <%= render(partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
+              identifier:   identifier,
+              json_request: json_request
+          },
+          cached: true) %>
+        <%# end %>
 
-        <%= render partial: 'components/collection/similar', locals: {
-            events:       items[:events],
-            identifier:   identifier,
-            json_request: json_request
-        } if !mobile_device? || !['feed'].include?(opts[:origin]) %>
+        <%# cache [params[:similar], items[:events]], {expires_in: 1.day} do %>
+          <%= render(partial: 'components/collection/similar', locals: {
+              events:       items[:events],
+              identifier:   identifier,
+              json_request: json_request
+          },
+          cached: true) if !mobile_device? || !['feed'].include?(opts[:origin]) %>
+        <%# end %>
 
         <% if actual_events_in_collection < total_events_in_collection && mobile_device? %>
           <div data-action="click->section#loadMore"
@@ -110,10 +121,11 @@
 
       <% end %>
     </div>
-    <%= render partial: 'components/collection/similar', locals: {
+    <%= render(partial: 'components/collection/similar', locals: {
         events:     items[:events],
         identifier: identifier
-    } if mobile_device? && ['feed'].include?(opts[:origin]) %>
+    },
+    cached: true) if mobile_device? && ['feed'].include?(opts[:origin]) %>
     <% if actual_events_in_collection < total_events_in_collection %>
       <div class="me-feed__load-more"
            data-action="click->section#loadMore"
@@ -141,5 +153,3 @@
     <% end %>
   </div>
 </section>
-<%# end %>
-<%# end %>
