Adjust favicon in welcome and application pages

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <%= notice %>
 
-<% content_for :meta_title, "#{@event.details_name} | Alegreme.com" %>
+<% content_for :meta_title, "Evento #{@event.details_name} em Porto Alegre | Alegreme.com" %>
 <% content_for :meta_description, strip_tags(limit_description_size(@event.details_description, 160)) %>
 <% content_for :meta_image, @event.image[:original].url %>
 
