--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,5 +1,7 @@
 <%= notice %>
 
+<% content_for :meta_title, "Eventos por #{@organizer.details_name} em Porto Alegre | Alegreme.com" %>
+
 <script type="application/ld+json">
   [
     <%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>
@@ -7,4 +9,3 @@
 </script>
 
 <%= render partial: "components/collection/collection", locals: @locals %>
-
