--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,7 @@
 <%= notice %>
+
+<% content_for :meta_title, "Eventos em #{@place.details_name} Porto Alegre | Alegreme.com" %>
+
 <script type="application/ld+json">
   [
     <%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>
