Fix cache in collection

--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -80,7 +80,7 @@
               identifier:   identifier,
               json_request: json_request
           },
-          cached: true) %>
+          cached: false) %>
         <%# end %>
 
         <%# cache [params[:similar], items[:events]], {expires_in: 1.day} do %>
