--- a/web/app/assets/stylesheets/components/me-components.scss
+++ b/web/app/assets/stylesheets/components/me-components.scss
@@ -1,4 +1,5 @@
 @import "me-card";
+@import "me-event-single";
 @import "me-saves";
 @import "me-feed";
 @import "me-float-menu";
@@ -22,3 +23,4 @@
 @import "me-similar";
 @import "me-tab-bar";
 @import "me-swipable";
+@import "me-button";
