Remove filter action for topics component

--- a/web/app/views/components/follow/_follow.html.erb
+++ b/web/app/views/components/follow/_follow.html.erb
@@ -8,7 +8,7 @@
 
 %>
 
-<div class="me-follow-chip-set mdc-chip-set mdc-chip-set--filter"
+<div class="me-follow-chip-set mdc-chip-set"
      data-controller="follow-chipset"
      data-target="follow-chipset.chipset"
      data-follow-chipset-similar-to="<%= event_id %>"
